tests/fixtures/positive/style/UnnecessaryLet.kt
package style

fun example() {
    val nullable: String? = "hello"
    nullable?.let { it }
    val x = "world"
    x.let { it.toString() }
}
