tests/fixtures/negative/style/UseLet.kt
package style

fun example(nullable: String?) {
    nullable?.let { it.length }
}
